--- a/index.html
+++ b/index.html
@@ -12,58 +12,61 @@
 </head>
 <body>
 
-<section>
-  <div class="max-length">
+  <section>
+    <div class=" island-2 gutter max-length">
 
-    <h1>Want to go to mars?</h1>
+      <h1>Want to go to Mars?</h1>
 
-    <p>We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
+      <p class="mega push">We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
+      <form class="push-0" method="POST" action="https://formspree.io/bradlet@algonquincollege.com">
+        <fieldset class="unit push xs-1">
+          <legend class="giga">Personal details</legend>
+          <div class="grid">
+            <div class="one unit xs-1 s-1 m-1 l-1-2 xl-1-2 push">
+              <label for="name">Name</label>
+              <input id="name" required>
+            </div>
+            <div class="one unit xs-1 s-1 m-1 l-1-2 xl-1-2 push">
+              <label for="age">Age</label>
+              <input id="age" required>
+            </div>
+            <div class="one unit xs-1 s-1 m-1 l-1-2 xl-1-2 push">
+              <label for="email">Email</label>
+              <input id="email" type="email" placeholder="me@me.com" name="email" required>
+            </div>
+            <div class=" one unit xs-1 s-1 m-1 l-1-2 xl-1-2 push">
+              <label for="fitness">Physical fitness</label>
+              <select id="fitness" name="fitness">
+                <option>- Super-human</option>
+                <option>- Fit as a fiddle</option>
+                <option>- Not terribly strong</option>
+                <option>- A little couch-potato-y</option>
+              </select>
+            </div>
+          </div>
 
-    <h2>Personal details</h2>
-      <form class="push-0" method="post" action="https://formspree.io/lani0016@algonquinlive.com">
-        <div class="push">
-          <label for="name">Name</label>
-          <input id="name" required>
-        </div>
-        <div class="push">
-          <label for="age">Age</label>
-          <input id="age" required>
-        </div>
-        <div class="push">
-          <label for="email">Email</label>
-          <input id="email" type="email" placeholder="me@me.com" name="email" required>
-        </div>
-        <div class="push">
-          <label for="fitness">Physical Fitness</label>
-          <select id="fitness" name="fitness">
-            <option>- Super-human</option>
-            <option>- Fit as a fiddle</option>
-            <option>- Not terribly strong</option>
-            <option>- A little couch-potato-y</option>
-          </select>
-        </div>
-        <div class="push">
-          <label for="details">Adress</label>
-          <textarea id="details" required> </textarea>
-        </div>
-        <h2>Mission Statement</h2>
-        <div class="push">
+          <div class="one push">
+            <label for="details">Address</label>
+            <textarea id="details" name="address" required> </textarea>
+          </div>
+        </fieldset>
+        <fieldset class="unit xs-1">
+          <legend>Mission statement</legend>
+        </fieldset>
+        <div class=" unit xs-1 push">
           <label for="why">Why do you want to go to Mars?</label>
-          <textarea name="why" required> </textarea>
+          <textarea id="why" name="why" required> </textarea>
         </div>
         <div>
-          <button class="btn btn-light mega" type="submit">Register for the trip!</button>
+          <button class="btn mega" type="submit">Register for the trip!</button>
         </div>
-        <div >
-          <input type="hidden" name="_subject" value="My subject">
+        <div>
+          <input type="hidden" name="_subject" value="Request to join the mission">
         </div>
       </form>
     </div>
 
-</div>
-
-
-</section>
+  </section>
 
 </body>
 </html>
